tests/hulk/ok/types/annotated.hulk
function add(x: Number, y: Number): Number {
    x + y;
}

function negate(b: Boolean): Boolean {
    !b;
}

{
    if (add(3, 4) == 7) print("ok") else print("fail");
    if (negate(false)) print("ok") else print("fail");
    if (add(0, 0) == 0) print("ok") else print("fail");
}
