tests/hulk/errors/semantic/type_mismatch.hulk
function add(x: Number, y: Number): Number {
    x + y;
}

{
    add("hello", 5);
};
